--- a/index.html
+++ b/index.html
@@ -29,10 +29,37 @@
   </header>
 
   <section class="sobre">
-    <div class="container">
+    <div class="flex-container">
+      <div class="container">
       <h2>Sobre Leandro Morais</h2>
-      <p>Psicanalista terapeuta com abordagem personalizada, focado no desenvolvimento emocional, autoconsciência e resolução de conflitos internos. Utiliza técnicas integrativas para ajudar seus pacientes a desbloquear padrões limitantes e construir uma vida com mais equilíbrio e propósito.</p>
-      <a href="#contato" class="btn">Quero agendar minha consulta</a>
+
+      <p>
+        Sou Leandro e meu prazer é auxiliar meu cliente a entender e acolher dores que não cabem em palavras. Reconduzir histórias que pareciam perdidas. Esse é o meu ofício.
+      </p>
+      <p>
+        Atuo como terapeuta em uma escuta que vai além do que se diz alcançando o que foi silenciado, sufocado, esquecido. Minha prática integra a profundidade da psicanálise clínica, os recursos transformadores da PNL (Programação Neurolinguística) como ferramentas para promover autoconhecimento, reconexão e alívio emocional.
+      </p>
+      <p>
+        Acolho especialmente homens e mulheres a partir dos 20 anos que carregam feridas deixadas por relacionamentos abusivos, perdas afetivas, términos difíceis, lutos e experiências que desencadearam ansiedade ou sensação de não pertencimento.
+      </p>
+      <p>
+        Meu trabalho é cuidar da dor invisível aquela que ninguém vê, mas que grita por dentro.
+      </p>
+      <p>
+        Com escuta profunda, presença ética e técnicas integradas, conduzo cada pessoa de volta ao seu próprio centro. Porque ninguém deveria viver para sempre preso ao que machucou.
+      </p>
+      <p>
+        Se você sente que está vivendo no automático, repetindo ciclos que ferem, ou se perdeu de si no meio do caminho talvez seja hora de se escutar com mais coragem.
+      </p>
+      <a href="#contato" class="btn">Vamos juntos ressignificar sua história.</a>
+    </div>
+    
+    <div class="sobre-img-wrapper">
+      <div class="sobre-img">
+        <img src="./assets/leandro-morais-4.svg" alt="Leandro Morais">
+        <span>Muito prazer, Dr. Leandro Morais</span>
+      </div>
+    </div>
     </div>
     
   </section>
@@ -40,6 +67,7 @@
   <section class="problemas-section">
   <div class="problemas-header">
     <h2>Eu estou aqui para ajudar você que tem esses problemas</h2>
+    <p>Psicanalista terapeuta com abordagem personalizada, focado no desenvolvimento emocional, autoconsciência e resolução de conflitos internos. Utiliza técnicas integrativas para ajudar seus pacientes a desbloquear padrões limitantes e construir uma vida com mais equilíbrio e propósito.</p>
   </div>
   <div class="problemas-grid">
     <div class="problema" style="background-image: url('/assets/images/ansiedade.png');">
