--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     
   </section>
 
-  <section class="metodo">
+  <section class="metodo overlay">
     <div class="container">
       <h2>Como a Terapia Funciona?</h2>
       <p>
@@ -171,9 +171,12 @@
         Você pode escolher entre sessões online, no conforto da sua casa, ou presenciais, em um ambiente acolhedor e preparado para o seu bem-estar.
       </p>
     </div>
+    <!--
     <div class="container-2">
         <img src="./assets/leandro-morais-2.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta">
     </div>
+    -->
+    
   </section>
   <section class="faq">
     <!-- conteúdo da seção -->
