--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
 <section class="problemas-section second-section">
   <div class="problemas-header">
-    <h2>Os benefícios de uma saúde mental em dia</h2>
+    <h2>A terapia proporcionará a sua saúde mental diversos benefícios como esses:</h2>
     <p>
-      São inúmeros os benefícios que nossos pacientes recebem com nossa terapia focada na remoção daquilo que não pertence ao paciente:
+      São inúmeros os benefícios que nossos pacientes recebem com nossa terapia focada na remoção daquilo que não pertence ao paciente
     </p>
   </div>
   <div class="problemas-grid">
@@ -205,7 +205,7 @@
   
 </section>
 
-  <section class="cta" id="contato">
+  <section class="cta overlay" id="contato">
     <div class="container">
       <h2>Agende Sua Sessão</h2>
       <form id="form-contato">
@@ -214,6 +214,24 @@
         <textarea name="mensagem" placeholder="Conte um pouco sobre você..." required></textarea>
         <button type="submit" class="btn">Enviar</button>
       </form>
+    </div>
+    <div class="redes-sociais">
+      <h2>Siga minhas redes sociais:
+        <div class="midias">
+          <a href="#">
+            <img src="./assets/icons/whatsapp.svg" alt="">
+            Meu WhatsApp
+          </a>
+          <a href="#">
+            <img src="./assets/icons/instagram.svg" alt="">
+            Meu Instagram
+          </a>
+          <a href="#">
+            <img src="./assets/icons/facebook.svg" alt="">
+            Meu Facebook
+          </a>
+        </div>
+      </h2>
     </div>
   </section>
 
