--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
     
   </section>
 
+  <section class="video-section">
+    <h2>Assista ao vídeo</h2>
+    <div class="video">
+      <video class="video-normal" src="./assets/video/leandro-morais-video.mp4" controls autoplay muted loop></video>
+
+    </div>
+  </section>
   <section class="problemas-section">
   <div class="problemas-header">
     <h2>Eu estou aqui para ajudar você que tem esses problemas</h2>
@@ -171,6 +178,7 @@
         Você pode escolher entre sessões online, no conforto da sua casa, ou presenciais, em um ambiente acolhedor e preparado para o seu bem-estar.
       </p>
     </div>
+    
     <!--
     <div class="container-2">
         <img src="./assets/leandro-morais-2.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta">
