--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section class="video-section">
     <h2>Assista ao vídeo</h2>
     <div class="video">
-      <video class="video-normal" src="./assets/video/leandro-morais-video.mp4" controls autoplay muted loop></video>
+      <video class="video-normal" src="./assets/video/leandro-morais-video.mp4" controls ></video>
 
     </div>
   </section>
