--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="container">
       <h1>Liberte-se de traumas e conflitos internos</h1>
       <p>Cuide da sua saúde mental com terapia com propósito e resultado</p>
-      <a href="#contato" class="btn">Agende sua sessão no WhatsApp</a>
+      <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
     </div>
     <div class="container-2">
         <img src="./assets/leandro-morais-1.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta">
@@ -51,7 +52,8 @@
       <p>
         Se você sente que está vivendo no automático, repetindo ciclos que ferem, ou se perdeu de si no meio do caminho talvez seja hora de se escutar com mais coragem.
       </p>
-      <a href="#contato" class="btn">Vamos juntos ressignificar sua história.</a>
+      <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Vamos juntos ressignificar sua história.</a>
     </div>
     
     <div class="sobre-img-wrapper">
@@ -65,7 +67,10 @@
   </section>
 
   <section class="video-section">
-    <h2>Assista ao vídeo</h2>
+    <div class="problemas-header">
+      <h2>Entenda como a Terapia Piscanalista pode ajudar você</h2>
+      <p>Assista ao vídeo e entenda como a Terapia Psicanalista pode ajudar você</p>
+    </div>
     <div class="video">
       <video class="video-normal" src="./assets/video/leandro-morais-video.mp4" controls ></video>
 
@@ -113,6 +118,8 @@
         <p>Experiências antigas podem continuar afetando sua vida. Vamos ressignificar isso juntos.</p>
       </div>
     </div>
+    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
   </div>
 </section>
 
@@ -160,7 +167,10 @@
         <p>Construa uma vida mais harmoniosa, com mais serenidade e propósito.</p>
       </div>
     </div>
+     <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
   </div>
+ 
 </section>
 
 
@@ -211,6 +221,7 @@
     </div>
   </div>
   
+  
 </section>
 
   <section class="cta overlay" id="contato">
@@ -220,7 +231,8 @@
         <input type="text" name="nome" placeholder="Seu nome" required />
         <input type="email" name="email" placeholder="Seu e-mail" required />
         <textarea name="mensagem" placeholder="Conte um pouco sobre você..." required></textarea>
-        <button type="submit" class="btn">Enviar</button>
+        <a  href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Enviar</a>
       </form>
     </div>
     <div class="redes-sociais">
