--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <video class="video-normal" src="./assets/video/leandro-morais-video.mp4" controls ></video>
 
     </div>
+    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
   </section>
   <section class="problemas-section">
   <div class="problemas-header">
@@ -118,9 +120,9 @@
         <p>Experiências antigas podem continuar afetando sua vida. Vamos ressignificar isso juntos.</p>
       </div>
     </div>
-    <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
   </div>
+  <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
 </section>
 
 <section class="problemas-section second-section">
@@ -167,10 +169,10 @@
         <p>Construa uma vida mais harmoniosa, com mais serenidade e propósito.</p>
       </div>
     </div>
-     <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
+     
   </div>
- 
+ <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
 </section>
 
 
@@ -196,33 +198,45 @@
     -->
     
   </section>
-  <section class="faq">
-    <!-- conteúdo da seção -->
+  <section class="faq-section">
+  <h2>Perguntas Frequentes</h2>
 
-
-
-  <div class="container">
-    <h2>Perguntas Frequentes</h2>
-    <div class="faq-item">
-      <h3 class="faq-question">Como funcionam as sessões de terapia?</h3>
-      <p class="faq-answer">As sessões são individuais, com duração média de 50 minutos, e ocorrem online ou presencialmente, dependendo da preferência do paciente.</p>
-    </div>
-    <div class="faq-item">
-      <h3 class="faq-question">Preciso ter algum problema específico para fazer terapia?</h3>
-      <p class="faq-answer">Não. A terapia é um espaço de desenvolvimento pessoal, ideal para qualquer pessoa que deseje se conhecer melhor, superar bloqueios ou melhorar sua qualidade de vida emocional.</p>
-    </div>
-    <div class="faq-item">
-      <h3 class="faq-question">Qual é a abordagem usada nas sessões?</h3>
-      <p class="faq-answer">Leandro Morais utiliza a psicanálise como base, complementada por técnicas integrativas adaptadas às necessidades de cada paciente.</p>
-    </div>
-    <div class="faq-item">
-      <h3 class="faq-question">As sessões são confidenciais?</h3>
-      <p class="faq-answer">Sim. Todo o conteúdo tratado nas sessões é sigiloso e protegido por ética profissional.</p>
+  <div class="faq-item">
+    <button class="faq-question">💬 Como funciona o atendimento terapêutico?</button>
+    <div class="faq-answer">
+      <p>As sessões são conduzidas com escuta ativa e sigilo total. Você pode falar sobre o que quiser, no seu tempo, sem julgamentos.</p>
     </div>
   </div>
-  
-  
+
+  <div class="faq-item">
+    <button class="faq-question">💻 As sessões são online ou presenciais?</button>
+    <div class="faq-answer">
+      <p>Atendo de forma online, com toda a segurança e privacidade. Assim, você pode se cuidar de qualquer lugar.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">⏱ Qual a duração e frequência das sessões?</button>
+    <div class="faq-answer">
+      <p>Cada sessão dura aproximadamente 50 minutos. A frequência ideal é semanal, mas ajustamos conforme sua necessidade.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">💰 Qual o valor da sessão?</button>
+    <div class="faq-answer">
+      <p>O valor será informado diretamente no contato inicial. Trabalhamos com valores acessíveis e pacotes mensais.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">📆 Como agendar uma sessão?</button>
+    <div class="faq-answer">
+      <p>É simples! Clique no botão abaixo para falar comigo diretamente pelo WhatsApp e agendar seu horário.</p>
+    </div>
+  </div>
 </section>
+
 
   <section class="cta overlay" id="contato">
     <div class="container">
