--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@
    <h2>VOCÊ NÃO ESTÁ SOZINHO, SINTA-SE ACOLHIDO COM AMOR E CARINHO E A CERTEZA DE QUE SUA DOR SERÁ CURADA</h2>
     
   </section>
+  <section class="testimonials">
+    <h2>O que dizem os pacientes</h2>
+    <div class="testimonial-container">
+      <div class="testimonial">
+        <p>"A terapia com o Leandro tem sido transformadora. Me sinto mais leve e aprendi a lidar melhor com minha ansiedade."</p>
+        <h4>— Mariana R., 29 anos</h4>
+      </div>
+      <div class="testimonial">
+        <p>"Sempre fui cético quanto à terapia, mas com o Leandro percebi o quanto é importante cuidar da saúde mental."</p>
+        <h4>— João P., 35 anos</h4>
+      </div>
+      <div class="testimonial">
+        <p>"As sessões online me ajudam muito na correria do dia a dia. O Leandro é atencioso e passa muita confiança."</p>
+        <h4>— Camila F., 41 anos</h4>
+      </div>
+    </div>
+    </section>
 
   <section class="metodo overlay">
     <div class="container">
