--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Leandro Morais - Terapia com Propósito</title>
+  <!-- Título da página -->
+  <title>Psicanálise e Terapia Online | Leandro Morais - Cuide da Sua Saúde Emocional</title>
+
+  <!-- Descrição para buscadores -->
+  <meta name="description" content="Sessões de terapia online com Leandro Morais, psicanalista. Atendimento humanizado, acolhimento e escuta ativa para ansiedade, depressão e autoconhecimento. Agende pelo WhatsApp.">
+
+  <!-- Palavras-chave (opcional, baixo impacto hoje em dia) -->
+  <meta name="keywords" content="terapia online, psicanalista, saúde mental, psicoterapia, ansiedade, autoconhecimento, depressão, Leandro Morais, atendimento psicológico, psicologia online">
+
+  <!-- Autor -->
+  <meta name="author" content="Leandro Morais">
+
+
+  <!-- SEO social: Facebook (Open Graph) -->
+  <meta property="og:title" content="Terapia Online com Leandro Morais – Psicanalista">
+  <meta property="og:description" content="Acolhimento e escuta para sua saúde emocional. Atendimento online com sigilo e empatia. Agende sua sessão.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://leandromorais.vercel.app">
+  <meta property="og:image" content="https://leandromorais.vercel.app/imagem-compartilhamento.jpg">
+
+  <!-- SEO social: Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Terapia Online com Leandro Morais – Psicanalista">
+  <meta name="twitter:description" content="Cuidar da mente é essencial. Atendimento terapêutico com sigilo, escuta e empatia.">
+  <meta name="twitter:image" content="https://leandromorais.vercel.app/imagem-compartilhamento.jpg">
+
+  <!-- Favicon (caso tenha) -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
