--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
       </button>
       <div class="menu" id="menu">
         <a href="#sobre">Sobre</a>
-        <a href="#metodo">Método</a>
+        <a href="#terapia">Terapia Psicanalista</a>
+        
+        <a href="#metodo">Como funciona?</a>
         <a href="#contato">Contato</a>
-        <a href="#">Saúde mental</a>
       </div>
     </nav>
     <div class="hero">
@@ -63,7 +64,7 @@
     </div>
   </header>
 
-  <section class="sobre">
+  <section class="sobre" id="sobre">
   <div class="flex-container">
     <div class="container">
       <div class="sobre-img-wrapper">
@@ -111,7 +112,7 @@
     <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
 " target="_blank" class="btn">Agende sua sessão no WhatsApp</a>
   </section>
-  <section class="problemas-section">
+  <section class="problemas-section" id="terapia">
   <div class="problemas-header">
     <h2>Eu estou aqui para ajudar você que tem esses problemas</h2>
     <p>Psicanalista terapeuta com abordagem personalizada, focado no desenvolvimento emocional, autoconsciência e resolução de conflitos internos. Utiliza técnicas integrativas para ajudar seus pacientes a desbloquear padrões limitantes e construir uma vida com mais equilíbrio e propósito.</p>
@@ -231,7 +232,7 @@
     </div>
     </section>
 
-  <section class="metodo overlay">
+  <section class="metodo overlay" id="metodo">
     <div class="container">
       <h2>Como a Terapia Funciona?</h2>
       <p>
