algumas alterações na hero

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
     </nav>
     <div class="hero">
       <div class="container">
-      <h1 data-aos="fade-down" data-aos-duration="1000">Liberte-se de traumas e conflitos internos</h1>
-      <p data-aos="fade-up" data-aos-duration="1000">Cuide da sua saúde mental com terapia com propósito e resultado</p>
+      <h1 data-aos="fade-down" data-aos-duration="1000">Liberte-se de traumas e conflitos internos com Psicanálise Terapeuta</h1>
+      <p data-aos="fade-up" data-aos-duration="1000">Cuide da sua saúde mental com terapias online com propósito e resultado</p>
       <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" onclick="fbq('track', 'Contact');" class="btn" data-aos="zoom-in-up" data-aos-duration="1000">Agende sua sessão no WhatsApp</a>
+" target="_blank" onclick="fbq('track', 'Contact');" class="btn" data-aos="zoom-in-up" data-aos-duration="1000">Clique e agende sua sessão no WhatsApp</a>
     </div>
     <div class="container-2">
         <img src="./assets/leandro-morais-1.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta" data-aos="fade-up" data-aos-duration="1000">
@@ -113,7 +113,7 @@
       <div class="sobre-img-wrapper">
         <div class="sobre-img" data-aos="fade-down" data-aos-duration="1400">
           <img src="./assets/leandro-morais-4.svg" alt="Leandro Morais">
-          <span>Muito prazer, Dr. Leandro Morais</span>
+          <span>Muito prazer, Leandro Morais, Psicanalista Tereapeuta</span>
         </div>
       </div>
 
