--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h1 data-aos="fade-down" data-aos-duration="1000">Liberte-se de traumas e conflitos internos com Psicanálise Terapeuta</h1>
       <p data-aos="fade-up" data-aos-duration="1000">Cuide da sua saúde mental com terapias online com propósito e resultado</p>
       <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" onclick="fbq('track', 'Contact');" class="btn" data-aos="zoom-in-up" data-aos-duration="1000">Clique e agende sua sessão no WhatsApp</a>
+" target="_blank" onclick="fbq('track', 'Contact');" class="btn" id="btnWhatsApp" data-aos="zoom-in-up" data-aos-duration="1000">Clique e agende sua sessão no WhatsApp</a>
     </div>
     <div class="container-2">
         <img src="./assets/leandro-morais-1.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta" data-aos="fade-up" data-aos-duration="1000">
@@ -136,7 +136,7 @@
         <p>
           Se você sente que está vivendo no automático, repetindo ciclos que ferem, ou se perdeu de si no meio do caminho talvez seja hora de se escutar com mais coragem.
         </p>
-        <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" onclick="fbq('track', 'Contact');" class="btn" data-aos="zoom-in-up" data-aos-duration="1400">Vamos juntos ressignificar sua história.</a>
+        <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" id="btnWhatsApp" onclick="fbq('track', 'Contact');" class="btn"  data-aos="zoom-in-up" data-aos-duration="1400">Vamos juntos ressignificar sua história.</a>
       </div>
     </div>
   </div>
@@ -153,7 +153,7 @@
 
     </div>
     <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" class="btn" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
+" target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
   </section>
   <section class="problemas-section" id="terapia">
   <div class="problemas-header">
@@ -199,7 +199,7 @@
     </div>
   </div>
   <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" class="btn" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
+" target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
 </section>
 
 <section class="problemas-section second-section">
@@ -249,7 +249,7 @@
      
   </div>
  <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" class="btn" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
+" target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
 </section>
 
 
@@ -340,7 +340,7 @@
         <input type="email" name="email" placeholder="Seu e-mail" required />
         <textarea name="mensagem" placeholder="Conte um pouco sobre você..." required></textarea>
         <a  href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" class="btn" onclick="fbq('track', 'Contact');">Enviar</a>
+" target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Enviar</a>
       </form>
     </div>
     <div class="redes-sociais">
