--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
   src="https://www.facebook.com/tr?id=694790506777886&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
+   <!-- Meta Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '2582147495450756');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=2582147495450756&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->
   
 </head>
 <body>
@@ -346,16 +363,17 @@
     <div class="redes-sociais">
       <h2>Siga minhas redes sociais:
         <div class="midias">
-          <a href="#">
+          <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
+" target="_blank">
             <img src="./assets/icons/whatsapp.svg" alt="">
             Meu WhatsApp
           </a>
-          <a href="#">
-            <img src="./assets/icons/instagram.svg" alt="">
+          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank">
+            <img src="./assets/icons/instagram.svg" alt="Icone do instagram de Leandro Morais Psicanalista Terapeuta">
             Meu Instagram
           </a>
-          <a href="#">
-            <img src="./assets/icons/facebook.svg" alt="">
+          <a href="https://www.facebook.com/profile.php?id=61577021954033" target="_blank">
+            <img src="./assets/icons/facebook.svg" alt="Icone do facebook de Psicanalista terapeuta">
             Meu Facebook
           </a>
         </div>
