--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </button>
       <div class="menu" id="menu">
         <a href="#sobre">Sobre</a>
-        <a href="#terapia">Terapia Psicanalista</a>
+        <a href="#terapia">Terapia Psicanalítica</a>
         
         <a href="#metodo">Como funciona?</a>
         <a href="#contato">Contato</a>
@@ -113,7 +113,7 @@
       <div class="sobre-img-wrapper">
         <div class="sobre-img" data-aos="fade-down" data-aos-duration="1400">
           <img src="./assets/leandro-morais-4.svg" alt="Leandro Morais">
-          <span>Muito prazer, Leandro Morais, Psicanalista Tereapeuta</span>
+          <span>Muito prazer, Leandro Morais, Psicanalista Terapeuta</span>
         </div>
       </div>
 
@@ -347,15 +347,15 @@
       <h2>Siga minhas redes sociais:
         <div class="midias">
           <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank">
+" target="_blank" style="background-color: rgb(41, 239, 41);">
             <img src="./assets/icons/whatsapp.svg" alt="">
             Meu WhatsApp
           </a>
-          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank">
+          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank" style="background-color: #ff00ff;">
             <img src="./assets/icons/instagram.svg" alt="Icone do instagram de Leandro Morais Psicanalista Terapeuta">
             Meu Instagram
           </a>
-          <a href="https://www.facebook.com/profile.php?id=61577021954033" target="_blank">
+          <a href="https://www.facebook.com/profile.php?id=61577021954033" target="_blank" style="background-color: rgb(11, 77, 243);">
             <img src="./assets/icons/facebook.svg" alt="Icone do facebook de Psicanalista terapeuta">
             Meu Facebook
           </a>
