--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <img src="./assets/icons/whatsapp.svg" alt="">
             Meu WhatsApp
           </a>
-          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank" style="background-color: #ff00ff;">
+          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank" style="background-color:rgb(255, 0, 25);">
             <img src="./assets/icons/instagram.svg" alt="Icone do instagram de Leandro Morais Psicanalista Terapeuta">
             Meu Instagram
           </a>
