--- a/index.html
+++ b/index.html
@@ -347,15 +347,15 @@
       <h2>Siga minhas redes sociais:
         <div class="midias">
           <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
-" target="_blank" style="background-color: rgb(41, 239, 41);">
+" target="_blank" style="background: linear-gradient(to right, #72c831, rgb(41, 206, 41));">
             <img src="./assets/icons/whatsapp.svg" alt="">
             Meu WhatsApp
           </a>
-          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank" style="background-color:rgb(255, 0, 25);">
+          <a href="https://www.instagram.com/leandromoraisterapeuta/" target="_blank" style="background: linear-gradient(to right, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);">
             <img src="./assets/icons/instagram.svg" alt="Icone do instagram de Leandro Morais Psicanalista Terapeuta">
             Meu Instagram
           </a>
-          <a href="https://www.facebook.com/profile.php?id=61577021954033" target="_blank" style="background-color: rgb(11, 77, 243);">
+          <a href="https://www.facebook.com/profile.php?id=61577021954033" target="_blank" style="background: linear-gradient(to right, #1877F2, #4267B2, #365899);">
             <img src="./assets/icons/facebook.svg" alt="Icone do facebook de Psicanalista terapeuta">
             Meu Facebook
           </a>
