--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
    <h2>VOCÊ NÃO ESTÁ SOZINHO(a), SINTA-SE ACOLHIDO(a) COM AMOR E CARINHO</h2>
     
   </section>
-  <section class="testimonials">
+  <section class="testimonials" style="display: none;">
     <h2>O que dizem os pacientes</h2>
     <div class="testimonial-container">
       <div class="testimonial">
@@ -274,6 +274,12 @@
       </div>
     </div>
     </section>
+
+  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4" data-elfsight-app-lazy>
+
+  </div>  
+
+
 
   <section class="metodo overlay" id="metodo">
     <div class="container">
@@ -372,5 +378,8 @@
 
   <script src="script.js"></script>
   <script> AOS.init() </script>
+  <!-- Elfsight Google Reviews | Untitled Google Reviews -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+
 </body>
 </html>
