--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia...
 " target="_blank" class="btn" id="btnWhatsApp" onclick="fbq('track', 'Contact');">Agende sua sessão no WhatsApp</a>
   </section>
-  <section class="problemas-section" id="terapia">
+  <section class="problemas-section first-section" id="terapia">
   <div class="problemas-header">
     <h2>Eu estou aqui para ajudar você que tem esses problemas</h2>
     <p>Psicanalista terapeuta com abordagem personalizada, focado no desenvolvimento emocional, autoconsciência e resolução de conflitos internos. Utiliza técnicas integrativas para ajudar seus pacientes a desbloquear padrões limitantes e construir uma vida com mais equilíbrio e propósito.</p>
