--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 </section>
 
 
-  <section class="beneficios">
+  <section class="beneficios" style="background-color: #000;">
    <h2>VOCÊ NÃO ESTÁ SOZINHO(a), SINTA-SE ACOLHIDO(a) COM AMOR E CARINHO</h2>
     
   </section>
@@ -275,7 +275,7 @@
     </div>
     </section>
 
-  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4" data-elfsight-app-lazy>
+  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4" style="background-color: #000;" data-elfsight-app-lazy>
 
   </div>  
 
