--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 </section>
 
 
-  <section class="beneficios" style="background-color: #000;">
-   <h2>VOCÊ NÃO ESTÁ SOZINHO(a), SINTA-SE ACOLHIDO(a) COM AMOR E CARINHO</h2>
+  <section class="beneficios" style="background-color: #000; color: #f5f5f5;">
+   <h2 style="color: #f5f5f5;;">VOCÊ NÃO ESTÁ SOZINHO(a), SINTA-SE ACOLHIDO(a) COM AMOR E CARINHO</h2>
     
   </section>
   <section class="testimonials" style="display: none;">
@@ -275,7 +275,7 @@
     </div>
     </section>
 
-  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4" style="background-color: #000;" data-elfsight-app-lazy>
+  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4 elfsight" style="background-color: #000; max-width: 1220px; margin: 0 auto;" data-elfsight-app-lazy>
 
   </div>  
 
