--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
   </section>
 
   <section class="sobre" id="sobre">
-    <div class="container">
+    <div class="flex-container">
+      <div class="container">
       <div class="sobre-img-wrapper">
         <div class="sobre-img" data-aos="fade-down" data-aos-duration="1400">
           <img src="./assets/leandro-morais-4.svg" alt="Leandro Morais">
@@ -153,6 +154,7 @@
         </p>
         <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank" id="btnWhatsApp" onclick="fbq('track', 'Contact');" class="btn"  data-aos="zoom-in-up" data-aos-duration="1400">Quero começar minha transformação emocional</a>
       </div>
+    </div>
     </div>
   </section>
 
