--- a/index.html
+++ b/index.html
@@ -82,23 +82,27 @@
   
 </head>
 <body>
-  <header>
-   <nav class="navbar">
-      <a href="#" class="logo">HARMONIA PSICANALÍTICA</a>
-      <button class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="menu" id="menu">
-        <a href="#sobre">Sobre</a>
-        <a href="#terapia-online">Terapia Online</a>
-        
-        <a href="#metodo">Como funciona?</a>
-        <a href="#contato">Contato</a>
-      </div>
-    </nav>
-    <div class="hero">
+  <header id="header">
+  <nav class="navbar">
+    <a href="#" class="logo">HARMONIA PSICANALÍTICA</a>
+    <button class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    <div class="menu" id="menu">
+      <a href="#sobre">Sobre</a>
+      <a href="#terapia-online">Terapia Online</a>
+      <a href="#avaliation">Avaliações</a>
+      <a href="https://wa.me/5531998648339?text=Olá%2C%20gostaria%20de%20agendar%20uma%20terapia..." target="_blank">
+        FALE COMIGO
+      </a>
+    </div>
+  </nav>
+  <div class="menu-overlay" id="menuOverlay"></div>
+</header>
+
+  <div class="hero">
       <div class="hero-containers">
         <div class="container">
       <h1 data-aos="fade-down" data-aos-duration="1000">Vença Suas Feridas Emocionais e Viva Relacionamentos Mais Leves e Saudáveis</h1>
@@ -109,8 +113,7 @@
       <img src="./assets/leandro-morais-1.svg" alt="Foto de Leandro Morais, Psicanalista Terapeuta" data-aos="fade-up" data-aos-duration="1000">
       </div>
     </div>
-  </header>
-
+  
   <section class="benefit-promisse">
     <div class="benefit-text">
       <h2>Mais de 10 anos ajudando pessoas</h2>
@@ -136,6 +139,8 @@
       </div>
     </div>
   </section>
+
+  
 
   <section class="sobre" id="sobre">
     <div class="flex-container">
@@ -270,7 +275,7 @@
   </section>
 
 
-  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4 elfsight"  data-elfsight-app-lazy>
+  <div class="elfsight-app-aa07635d-993c-4556-a380-b4a701fb44f4 elfsight" id="avaliation" data-elfsight-app-lazy>
 
   </div>  
 
